# kapable-clang-sast

./: CMakeLists.txt  Capable.cpp  ConditionCap.cpp  ConditionCap.hpp  README.md
